# rag-assistant

./: .env.example  Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
src/: chat.py  config.py  models.py  process_data.py  retrieval.py  ui_components.py  vector_store.py
