[project]
name = "rag-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "langchain>=0.3.27",
    "langchain-cohere>=0.3.8",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.76",
    "langchain-docling>=1.1.0",
    "langchain-openai>=0.3.33",
    "langchain-postgres>=0.0.15",
    "langchain-text-splitters>=0.3.11",
    "psycopg-binary>=3.2.10",
    "pypdf>=6.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.50.0",
    "trafilatura>=2.0.0",
]
